Make scrollbar consistent across browsers and fix flexbox overflow

--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -18,13 +18,15 @@ h1 {
 }
 
 .content {
-  align-items: center;
+  align-items: safe center;
   color: #fff;
   display: flex;
   flex-direction: column;
   font-size: 2rem;
   height: 100%;
-  justify-content: center;
+  justify-content: safe center;
+  min-height: min-content;
+  min-width: min-content;
   text-align: center;
 }
 
@@ -327,6 +329,27 @@ div.main {
 
 .bold {
   font-weight: 700;
+}
+
+::selection {
+  background: #09776c;
+}
+
+::-webkit-scrollbar {
+  height: 5px;
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background: #363636;
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-webkit-scrollbar-corner {
+  background: transparent;
 }
 
 html {
